--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     ]
   },
   "dependencies": {
+    "leaflet": "^1.7.1",
     "next": "10.2.0",
     "next-pwa": "^5.2.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-leaflet": "^3.1.0",
     "styled-components": "^5.3.0",
     "webpack": "4"
   },
@@ -30,6 +32,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@types/jest": "^26.0.23",
+    "@types/leaflet": "^1.7.0",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@types/styled-components": "^5.1.9",
