--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
     "test": "jest",
@@ -26,6 +27,7 @@
     "next": "10.2.0",
     "next-pwa": "^5.2.21",
     "next-seo": "^4.24.0",
+    "next-sitemap": "^1.6.57",
     "nextjs-progressbar": "^0.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
